src/test/ui/structs/struct-field-init-syntax.stderr
error: cannot use a comma after the base struct
  --> $DIR/struct-field-init-syntax.rs:18:9
   |
LL |         ..Foo::default(),
   |         ^^^^^^^^^^^^^^^^- help: remove this comma
   |
   = note: the base struct must always be the last field

error: cannot use a comma after the base struct
  --> $DIR/struct-field-init-syntax.rs:23:9
   |
LL |         ..Foo::default(),
   |         ^^^^^^^^^^^^^^^^- help: remove this comma
   |
   = note: the base struct must always be the last field

error: aborting due to 2 previous errors

